# Content_Creation_Agents

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  sample.py  test.py
Video/: prototype.webm
output/: Content_Ideas.md  Finding_Trends.md  SEO_Optimized_Content.md
prompt_versioning/: tasks_prompt1.yaml  tasks_prompt2.yaml  tasks_prompt3.yaml  tasks_prompt4.yaml  tasks_prompt5.yaml
src/posttrend/: crew.py  main.py
src/posttrend/config/: agents.yaml  tasks.yaml
src/posttrend/tools/: search_tool.py
